--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,3 +1,45 @@
-.btn {
+.btn,
+.btn:link,
+.btn:visited{
+  display: inline-block;
+  text-decoration: none;
+  color: #b7b7b7;
+  background-color: white;
+  padding: 1.5rem 4rem;
+  width: fit-content;
+  font-size: 1.6rem;
+  border-radius: 10rem;
+  box-shadow: 0 1rem 1rem rgba(173, 181, 189, 0.27);
+  text-transform: uppercase;
+  transition: .3s all linear;
+}
 
+.btn:hover {
+  transform: translateY(-.3rem);
+  box-shadow: 0 .5rem .5rem rgba(173, 181, 189, 0.17);
+}
+
+.btn:active {
+  transform: translateY(.1rem);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .07);
+}
+
+.btn::after {
+  content:'';
+  position: absolute;
+  height:100%;
+  width:100%;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  color: #b7b7b7;
+  background-color: $color-primary-light  ;
+  border-radius: 10rem;
+  z-index:-1;
+  transition: .3s all linear;
+}
+
+.btn:hover::after{
+  transform: scale(1.4,1.6);
+  opacity: 0;
 }
