--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
 @import "animation/keyframs";
 
 @import "components/font";
+@import "components/popup";
+@import "components/button";
 
 @import "layout/header";
 @import "layout/navigation";
