--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -5,7 +5,7 @@
   left: 0;
   height: 100%;
   z-index: 688;
-  transition: .5s all;
+  //transition: .5s all;
   width: 100%;
 
   &_show {
@@ -15,7 +15,7 @@
   }
 
   &_init {
-    transform: scale(.5);
+    transform: scale(0);
     visibility: hidden;
     opacity: 0;
   }
